k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voting-app
  labels:
    app: worker
  name: worker

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%

  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - worker
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        runAsNonRoot: true      
      automountServiceAccountToken: false
      serviceAccountName: worker-sa
      containers:
        - image: azam92/voting-app-worker:23
          name: worker

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - test -d /proc/1
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - test -d /proc/1
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
